style.css
body{
    background-image: url(../images/purplePixelBackground.jpeg);
    background-repeat: no-repeat;
    width: 100%;
    height: 100%;
    background-position: center center;
    text-align: center;
    margin: auto;
    padding: 0;
    background-size: cover;
    background-color: #cccccc;
}

#root{
    width: 90vw;
    height: 90vh;
    
}

 /* .asteroid:hover{
    animation-duration: 3s;
    animation-name: slidFein;
    animation-iteration-count: infinite;
    animation-direction: alternate;
 }

@keyframes slidein{
    from{
        margin-left: 50%;
        width: 50%;
    }
    to {
        margin-left: 0%;
        width: 100%;
    }
}   */

/* .asteroid{
    tra
} */

#guide{
    position: fixed;
    left: 40vw;
    bottom: 50vh;
    /* outline: red 5px solid; */
    text-align: center;
    border-radius: 25px;
}

#winCard{
    display: none;
    /* outline: red 2px solid; */
    background-color: white;
    color: white;
    background-color: #3DBEA8;
    max-width: 450px;
    position: fixed;
    left: 40vw;
    bottom: 35vh;
}

#loseCard{
    display: none;
    
    position: fixed;
    left: 45vw;
    bottom: 35vh;
}

h1 , h2{
    font-family: Arial, Helvetica, sans-serif;
    color: white;
    background-color: #DFADFF;
    padding: 15px 25px;
    max-width: 450px;
    margin: 5px;
    border-radius: 20px;
}

p{
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: white;
    font-size: large;
    max-width: 450px;
    margin: 0px;
    background-color: #DFADFF;
    text-align: center;
    border-radius: 20px;
    padding: 15px 0px;
}

#winner{
    background-color: #3DBEA8 !important;
}

#start{
    margin: 15px 0px !important;
    

}

#start:hover{
    transition: 0.5s;
    background-color: #3DBEA8;
}

h2{
    background-color: #3DBEA8 !important;
    border-radius: 20px !important;
}


.asteroid{
    max-width: 200px;
    max-height: 200px;
}




#leftBar{
    height: 1000vh;
    width: 5vw;
    background-color: #FFFADE;
    position: fixed;
    bottom: 0.2vh;
}

#bottomBar{
    height: 20vh;
    width: 100vw;
    background-color: #FFFADE;
    position: fixed;
    top: 92vh;
}

#rightBar{
    height: 1000vh;
    width: 5vw;
    background-color: #FFFADE;
    position: fixed;
    bottom: 0.2vh;
    left: 95vw;
}

